[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprite/Barra_vida/vida.png" type="Texture" id=1]
[ext_resource path="res://Elementos/Barra_vida/Barra_vida.gd" type="Script" id=2]

[node name="Barra_vida" type="Node2D"]
script = ExtResource( 2 )

[node name="Vida" type="Sprite" parent="."]
position = Vector2( 14, 8 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 1 )

[node name="Vida2" type="Sprite" parent="."]
position = Vector2( 46, 8 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 1 )

[node name="Vida3" type="Sprite" parent="."]
position = Vector2( 78, 8 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 1 )

[node name="Vida4" type="Sprite" parent="."]
position = Vector2( 110, 8 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 1 )

[node name="Vida5" type="Sprite" parent="."]
position = Vector2( 142, 8 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 1 )
