extends Node2D


func _process(delta):
	if global_Var.bara_vida == 1 :
		$Vida.visible = false
	
	if global_Var.bara_vida == 2 :
		$Vida2.visible = false
		
	if global_Var.bara_vida == 3 :
		$Vida3.visible = false
	
	if global_Var.bara_vida == 4 :
		$Vida4.visible = false
	
	if global_Var.bara_vida == 5 :
		$Vida5.visible = false
	
	
	
	
	
